svgplotlib/@src/VG/VGLib.pxd


    void vgSetParameterf(VGHandle object,
                                 VGint paramType,
                                 VGfloat value)
    void vgSetParameteri(VGHandle object,
                                 VGint paramType,
                                 VGint value)
    void vgSetParameterfv(VGHandle object,
                                  VGint paramType,
                                  VGint count, VGfloat * values)
    void vgSetParameteriv(VGHandle object,
                                  VGint paramType,
                                  VGint count, VGint * values)

    VGfloat vgGetParameterf(VGHandle object,
                                    VGint paramType)
    VGint vgGetParameteri(VGHandle object,
                                  VGint paramType)
    VGint vgGetParameterVectorSize(VGHandle object,
                                           VGint paramType)
    void vgGetParameterfv(VGHandle object,
                                  VGint paramType,
                                  VGint count, VGfloat * values)
    void vgGetParameteriv(VGHandle object,
                                  VGint paramType,
                                  VGint count, VGint * values)
    
    # Matrix Manipulation
    void vgLoadIdentity()
    void vgLoadMatrix(VGfloat * m)
    void vgGetMatrix(VGfloat * m)
    void vgMultMatrix(VGfloat * m)
    void vgTranslate(VGfloat tx, VGfloat ty)
    void vgScale(VGfloat sx, VGfloat sy)
    void vgShear(VGfloat shx, VGfloat shy)
    void vgRotate(VGfloat angle)

    # Masking and Clearing
    void vgMask(VGImage mask, VGMaskOperation operation,
                VGint x, VGint y, VGint width, VGint height)
    void vgClear(VGint x, VGint y, VGint width, VGint height)
    
    # Paths
    VGPath vgCreatePath(VGint pathFormat,
                        VGPathDatatype datatype,
                        VGfloat scale, VGfloat bias,
                        VGint segmentCapacityHint,
                        VGint coordCapacityHint,
                        VGbitfield capabilities)
    void vgClearPath(VGPath path, VGbitfield capabilities)
    void vgDestroyPath(VGPath path)
    void vgRemovePathCapabilities(VGPath path, VGbitfield capabilities)
    VGbitfield vgGetPathCapabilities(VGPath path)
    void vgAppendPath(VGPath dstPath, VGPath srcPath)
    void vgAppendPathData(VGPath dstPath,
                          VGint numSegments,
                          VGubyte * pathSegments,
                          void * pathData)
    void vgModifyPathCoords(VGPath dstPath, VGint startIndex,
                            VGint numSegments,
                            void * pathData)
    void vgTransformPath(VGPath dstPath, VGPath srcPath)
    VGboolean vgInterpolatePath(VGPath dstPath,
                                VGPath startPath,
                                VGPath endPath,
                                VGfloat amount)
    VGfloat vgPathLength(VGPath path, VGint startSegment, VGint numSegments)
    void vgPointAlongPath(VGPath path,
                          VGint startSegment, VGint numSegments,
                          VGfloat distance,
                          VGfloat * x, VGfloat * y,
                          VGfloat * tangentX, VGfloat * tangentY)
    void vgPathBounds(VGPath path,
                      VGfloat * minX, VGfloat * minY,
                      VGfloat * width, VGfloat * height)
    void vgPathTransformedBounds(VGPath path,
                                 VGfloat * minX, VGfloat * minY,
                                 VGfloat * width, VGfloat * height)
    void vgDrawPath(VGPath path, VGbitfield paintModes)

    # Paint
    VGPaint vgCreatePaint()
    void vgDestroyPaint(VGPaint paint)
    void vgSetPaint(VGPaint paint, VGbitfield paintModes)
    VGPaint vgGetPaint(VGPaintMode paintMode)
    void vgSetColor(VGPaint paint, VGuint rgba)
    VGuint vgGetColor(VGPaint paint)
    void vgPaintPattern(VGPaint paint, VGImage pattern)

    # Images
    VGImage vgCreateImage(VGImageFormat format,
                          VGint width, VGint height,
                          VGbitfield allowedQuality)
    void vgDestroyImage(VGImage image)
    void vgClearImage(VGImage image, VGint x, VGint y, VGint width, VGint height)
    void vgImageSubData(VGImage image,
                        void * data, VGint dataStride,
                        VGImageFormat dataFormat,
                        VGint x, VGint y, VGint width, VGint height)
    void vgGetImageSubData(VGImage image,
                           void * data, VGint dataStride,
                           VGImageFormat dataFormat,
                           VGint x, VGint y,
                           VGint width, VGint height)
    VGImage vgChildImage(VGImage parent, VGint x, VGint y, VGint width, VGint height)
    VGImage vgGetParent(VGImage image) 
    void vgCopyImage(VGImage dst, VGint dx, VGint dy,
                     VGImage src, VGint sx, VGint sy,
                     VGint width, VGint height,
                     VGboolean dither)
    void vgDrawImage(VGImage image)
    void vgSetPixels(VGint dx, VGint dy,
                     VGImage src, VGint sx, VGint sy,
                     VGint width, VGint height)
    void vgWritePixels(void * data, VGint dataStride,
                       VGImageFormat dataFormat,
                       VGint dx, VGint dy,
                       VGint width, VGint height)
    void vgGetPixels(VGImage dst, VGint dx, VGint dy,
                     VGint sx, VGint sy,
                     VGint width, VGint height)
    void vgReadPixels(void * data, VGint dataStride,
                      VGImageFormat dataFormat,
                      VGint sx, VGint sy,
                      VGint width, VGint height)
    void vgCopyPixels(VGint dx, VGint dy,
                      VGint sx, VGint sy,
                      VGint width, VGint height)

    # Image Filters
    void vgColorMatrix(VGImage dst, VGImage src,
                               VGfloat * matrix)
    void vgConvolve(VGImage dst, VGImage src,
                    VGint kernelWidth, VGint kernelHeight,
                    VGint shiftX, VGint shiftY,
                    VGshort * kernel,
                    VGfloat scale,
                    VGfloat bias,
                    VGTilingMode tilingMode)
    void vgSeparableConvolve(VGImage dst, VGImage src,
                             VGint kernelWidth,
                             VGint kernelHeight,
                             VGint shiftX, VGint shiftY,
                             VGshort * kernelX,
                             VGshort * kernelY,
                             VGfloat scale,
                             VGfloat bias,
                             VGTilingMode tilingMode)
    void vgGaussianBlur(VGImage dst, VGImage src,
                        VGfloat stdDeviationX,
                        VGfloat stdDeviationY,
                        VGTilingMode tilingMode)
    void vgLookup(VGImage dst, VGImage src,
                  VGubyte * redLUT,
                  VGubyte * greenLUT,
                  VGubyte * blueLUT,
                  VGubyte * alphaLUT,
                  VGboolean outputLinear,
                  VGboolean outputPremultiplied)
    void vgLookupSingle(VGImage dst, VGImage src,
                        VGuint * lookupTable,
                        VGImageChannel sourceChannel,
                        VGboolean outputLinear,
                        VGboolean outputPremultiplied)
    
    # Hardware Queries
    VGHardwareQueryResult vgHardwareQuery(VGHardwareQueryType key,
                                                  VGint setting)

    # Renderer and Extension Information
    VGubyte * vgGetString(VGStringID name)

    # Extensions
    int OVG_SH_blend_src_out
    int OVG_SH_blend_dst_out
    int OVG_SH_blend_src_atop
    int OVG_SH_blend_dst_atop

    VGboolean vgCreateContextSH(VGint width, VGint height)
    void vgResizeSurfaceSH(VGint width, VGint height)
    void vgDestroyContextSH()
    
    ctypedef void (*OffScreenCB)(void *userdata)
    VGboolean shOffscreenRender(int width, int height, OffScreenCB draw, OffScreenCB finish, void *userdata)
    void *vgCreateOffScreenSH()
    void vgDestroyOffScreenSH(void *oscontext)
    void vgStartOffScreenSH(void *oscontext, int width, int height)
    void vgEndOffScreenSH(void *oscontext, unsigned char *pixels)

cdef extern from "vg/vgu.h":
    ctypedef enum VGUErrorCode:
        pass
    
    VGUErrorCode VGU_NO_ERROR
    VGUErrorCode VGU_BAD_HANDLE_ERROR
    VGUErrorCode VGU_ILLEGAL_ARGUMENT_ERROR
    VGUErrorCode VGU_OUT_OF_MEMORY_ERROR
    VGUErrorCode VGU_PATH_CAPABILITY_ERROR
    VGUErrorCode VGU_BAD_WARP_ERROR
    
    ctypedef enum VGUArcType:
        pass
    
    VGUArcType VGU_ARC_OPEN
    VGUArcType VGU_ARC_CHORD
    VGUArcType VGU_ARC_PIE
    
    VGUErrorCode vguLine(VGPath path,
                          VGfloat x0, VGfloat y0,
                          VGfloat x1, VGfloat y1)
    
    VGUErrorCode vguPolygon(VGPath path,
                            VGfloat *points, VGint count,
                            VGboolean closed)
    
    VGUErrorCode vguRect(VGPath path,
                         VGfloat x, VGfloat y,
                         VGfloat width, VGfloat height)
    
    VGUErrorCode vguRoundRect(VGPath path,
                              VGfloat x, VGfloat y,
                              VGfloat width, VGfloat height,
                              VGfloat arcWidth, VGfloat arcHeight)
    
    VGUErrorCode vguEllipse(VGPath path,
                            VGfloat cx, VGfloat cy,
                            VGfloat width, VGfloat height)
    
    VGUErrorCode vguArc(VGPath path,
                        VGfloat x, VGfloat y,
                        VGfloat width, VGfloat height,
                        VGfloat startAngle, VGfloat angleExtent,
                        VGUArcType arcType)
                        
    VGUErrorCode vguComputeWarpQuadToSquare(VGfloat sx0, VGfloat sy0,
                                            VGfloat sx1, VGfloat sy1,
                                            VGfloat sx2, VGfloat sy2,
                                            VGfloat sx3, VGfloat sy3,
                                            VGfloat *matrix)
    
    VGUErrorCode vguComputeWarpSquareToQuad(VGfloat dx0, VGfloat dy0,
                                            VGfloat dx1, VGfloat dy1,
                                            VGfloat dx2, VGfloat dy2,
                                            VGfloat dx3, VGfloat dy3,
                                            VGfloat *matrix)

    VGUErrorCode vguComputeWarpQuadToQuad(VGfloat dx0, VGfloat dy0,
                                          VGfloat dx1, VGfloat dy1,
                                          VGfloat dx2, VGfloat dy2,
                                          VGfloat dx3, VGfloat dy3,
                                          VGfloat sx0, VGfloat sy0,
                                          VGfloat sx1, VGfloat sy1,
                                          VGfloat sx2, VGfloat sy2,
                                          VGfloat sx3, VGfloat sy3,
                                          VGfloat *matrix)